# nebula3-renderer

./: .gitignore  CMakeLists.txt  LICENSE.md  NDEVC.cpp  NDEVC_Editor.cpp  imgui.ini  n3_editor_layout.ini
docs/: map.md  model.txt  shaders.txt
libs/glad/src/: glad.c
libs/imguizmo/: CMakeLists.txt  ImGuizmo.cpp  ImGuizmo.h
shaders/: NDEVCdecal_mesh.frag  NDEVCdecal_mesh.vert  NDEVCdeferred.frag  NDEVCdeferred.vert  NDEVCdeferred_alpha_depth.frag  NDEVCsimplelayer.frag  NDEVCsimplelayer.vert  blit.frag  blit.vert  compose.frag  compose.vert  environment.frag  environment.vert  environment_alpha.frag  environment_legacy.frag  environment_legacy.vert  lightCompose.frag  lightComposition.frag  lightShadows.frag  lightShadows.vert  lighting.frag  lighting.vert  particle.frag  particle.vert  pointLight.frag  pointLight.vert  postalphaunlit.frag  postalphaunlit.vert  refraction.frag  refraction.vert  simplelayer.frag  simplelayer.vert  standard.frag  standard.vert  standard_gbuffer_compose.frag  standard_gbuffer_compose.vert  standard_light_accum.frag  standard_present.frag  water.frag  water.vert
shaders/DEBUG/: NDEVCdecal_simple.frag  NDEVCdecal_simple.vert  passthrough.frag  passthrough.vert
src/: ACTUAL_ISSUES.md  AnimationSystem.cpp  AnimationSystem.h  AnimatorNodeInstance.cpp  AnimatorNodeInstance.h  Camera.h  DeferredRenderer.cpp  DeferredRenderer.h  DeferredRendererAnimation.cpp  DeferredRendererAnimation.h  DeferredRendererPicking.cpp  DeferredRendererRenderLoop.cpp  DeferredRendererScene.cpp  DeferredRendererUI.cpp  DeferredRendererVisibility.cpp  DeferredRendererWebSnapshot.cpp  DrawBatchSystem.cpp  DrawBatchSystem.h  DrawCmd.h  Errors.h  FrameGraph.cpp  FrameGraph.h  GLStateDebug.h  MegaBuffer.cpp  MegaBuffer.h  Mesh.cpp  Mesh.h  NC.Logger.h  NDEVcBinaryReader.h  NDEVcBinaryWriter.h  NDEVcHeaders.h  NDEVcStructure.h  Parser.cpp  Parser.h  Rendering.cpp  Rendering.h  SelectionRaycaster.cpp  Shader.cpp  Shader.h  ShaderManager.cpp  (+5 more)
src/Animation/: AnimationSystem.cpp  AnimatorNodeInstance.cpp  AnimatorNodeInstance.h
src/Assets/: NDEVcBinaryReader.h  NDEVcBinaryWriter.h  NDEVcStructure.h  Parser.cpp  Parser.h  ResourceServer.h
src/Assets/Map/: MapLoader.cpp  MapLoader.h
src/Assets/Model/: Model.cpp  Model.h  ModelInstance.h  ModelServer.h
src/Assets/Particles/: EmitterAttrs.h  EmitterMesh.cpp  EnvelopeCurve.h  EnvelopeSampleBuffer.cpp  Particle.h  ParticleServer.h  ParticleSystem.h  ParticleSystemInstanceBase.cpp  ParticleSystemInstanceBase.h  ParticleSystemNode.cpp  ParticleSystemNode.h  glparticlerenderer.cpp  glparticlerenderer.h  glparticlesysteminstance.cpp  glparticlesysteminstance.h
src/Assets/Servers/: MeshServer.h  TextureServer.cpp  TextureServer.h
src/Audio/: IAudioEngine.h
src/Core/: Core.cpp  Core.h  EngineSystems.cpp  EngineSystems.h  Errors.h  FrameArena.h  GlobalState.cpp  GlobalState.h  Initialization.cpp  Initialization.h  Logger.h  VFS.cpp  VFS.h
src/ECS/: EntityRegistry.h  IComponent.h  ISystem.h
src/Editor/: DeferredRendererUI.cpp  MainWindow.cpp  MainWindow.h  ViewportWindow.cpp  ViewportWindow.h
src/Engine/: SceneManager.cpp  SceneManager.h  SceneSnapshot.h
src/Engine/Core/: Core.cpp  Core.h  EngineSystems.cpp  EngineSystems.h  Initialization.cpp  Initialization.h
src/Export/: Cooker.cpp  Cooker.h  ExportCache.cpp  ExportCache.h  ExportGraph.cpp  ExportGraph.h  ExportTypes.h  Package.cpp  Package.h  PackageReader.cpp  PackageReader.h  SceneExportOptimizer.cpp  SceneExportOptimizer.h  StandaloneBuilder.cpp  StandaloneBuilder.h  ValidationGates.cpp  ValidationGates.h
src/Input/: GLFWInput.cpp  GLFWInput.h  IInputSystem.h  InputSnapshot.h
src/Map/: MapHeader.h  MapLoader.cpp  MapLoader.h
src/Model/: Model.cpp  ModelInstance.h  ModelServer.h
src/ParticleData/: EmitterMesh.cpp  EmitterMesh.h  EnvelopeCurve.cpp  EnvelopeSampleBuffer.h  ParticleRenderInfo.h  ParticleRenderer.cpp  ParticleRenderer.h  ParticleServer.h  ParticleSystem.cpp  ParticleSystemInstanceBase.cpp  ParticleSystemInstanceBase.h  ParticleSystemNode.cpp  ParticleSystemNode.h  ParticleSystemState.h  RingBuffer.h  glparticlerenderer.cpp  glparticlerenderer.h  glparticlesysteminstance.cpp  glparticlesysteminstance.h  particlesystem_loader.h
src/Physics/: IPhysicsWorld.h
src/Platform/: GLFWPlatform.cpp  GLFWPlatform.h  GLFWWindow.cpp  GLFWWindow.h  IWindow.h  NDEVcHeaders.h
src/Servers/: MeshServer.h  TextureServer.cpp  TextureServer.h
src/rendering/: Camera.h  DeferredRenderer.cpp  DeferredRenderer.h  DeferredRendererAnimation.cpp  DeferredRendererAnimation.h  DeferredRendererDrawUtils.cpp  DeferredRendererFrameLoop.cpp  DeferredRendererPassSetup.cpp  DeferredRendererPicking.cpp  DeferredRendererPolicy.cpp  DeferredRendererRenderContext.cpp  DeferredRendererRenderLoop.cpp  DeferredRendererRenderPasses.cpp  DeferredRendererScene.cpp  DeferredRendererVisibility.cpp  DeferredRendererWebSnapshot.cpp  DrawBatchSystem.cpp  DrawBatchSystem.h  DrawCmd.h  FrameGate.h  FrameGraph.cpp  FrameGraph.h  GLHandles.h  IRenderPass.h  MaterialGPU.h  MegaBuffer.cpp  MegaBuffer.h  Mesh.cpp  Mesh.h  RenderContext.h  RenderGraph.cpp  RenderGraph.h  RenderResourceRegistry.cpp  RenderResourceRegistry.h  Rendering.cpp  Rendering.h  SelectionRaycaster.cpp  SelectionRaycaster.h  Shader.cpp  Shader.h  (+4 more)
src/rendering/Interfaces/: IBuffer.h  IFramebuffer.h  IGraphicsDevice.h  IRenderState.h  IRenderer.h  ISampler.h  IShader.h  ITexture.h  RenderingTypes.h
src/rendering/Visibility/: InternalVisibilityStage.cpp  InternalVisibilityStage.h  VisibilityGrid.cpp  VisibilityGrid.h
src/rendering/abstract/: IBuffer.h  IFramebuffer.h  IGraphicsDevice.h  IPlatform.h  IRenderState.h  IRenderer.h  ISampler.h  IShaderManager.h  ITexture.h  ITextureLoader.h  RenderingTypes.h
src/rendering/opengl/: GLFWInput.cpp  (+24 more)
src/toolkit/: Logging.h
src/toolkit/mesh-viewer/: CMakeLists.txt  MeshViewer.cpp  MeshViewer.h  main.cpp
src/toolkit/mesh-viewer/shaders/: mesh_viewer.frag  mesh_viewer.vert  mesh_viewer_point.frag  mesh_viewer_point.vert
src/visibility/: VisibilityGrid.cpp  VisibilityGrid.h
(+38 files in other folders)
